--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "update-deps": "npm update"
   },
   "dependencies": {
+    "nodemailer": "^6.9.13",
     "lucide-react": "^0.468.0",
     "next": "^15.4.2",
     "react": "^19.1.0",
