--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "update-deps": "npm update"
   },
   "dependencies": {
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.468.0",
     "next": "^15.4.2",
+    "nodemailer": "^7.0.5",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "resend": "^6.0.1"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
+    "@types/nodemailer": "^7.0.0",
     "@types/react": "^19.1.6",
-    "@types/react-dom": "^19.1.6", 
+    "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
     "eslint-config-next": "^15.4.2",
