--- a/package.json
+++ b/package.json
@@ -2,6 +2,23 @@
   "name": "landing-page",
   "version": "1.0.0",
   "private": true,
+  "description": "Uma landing page moderna e profissional construída com Next.js 15, TypeScript e Tailwind CSS, seguindo as melhores práticas de desenvolvimento e design.",
+  "homepage": "https://github.com/humanaLabs/landingpagelivro#readme",
+  "bugs": {
+    "url": "https://github.com/humanaLabs/landingpagelivro/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/humanaLabs/landingpagelivro.git"
+  },
+  "license": "ISC",
+  "author": "",
+  "type": "module",
+  "main": "next.config.js",
+  "directories": {
+    "doc": "docs",
+    "lib": "lib"
+  },
   "scripts": {
     "dev": "next dev --turbo",
     "dev:normal": "next dev",
